--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
     </div>
     <script>
         let password = "";
-        const correctPassword = "15022008";
+        const correctPassword = "1308";
         const passwordInput = document.getElementById("password");
         const passwordSection = document.getElementById("passwordSection");
         const tiktokSection = document.getElementById("tiktokSection");
