--- a/sinhnhat.html
+++ b/sinhnhat.html
@@ -240,13 +240,10 @@
         <div class="envelope-flap"></div>
         <div class="letter">
             <h1>Lá Thư Tâm Tình</h1>
-            <p>Thân gửi Dương Kiều Vỹ,</p>
-            <p>Tôi viết thư này để bày tỏ tình cảm chân thành của mình.</p>
-            <p>Bạn là ánh sáng trong cuộc đời tôi, luôn làm tôi mỉm cười.</p>
-            <p>Mỗi khoảnh khắc bên bạn đều là kỷ niệm quý giá tôi trân trọng.</p>
-            <p>Dù có khó khăn, tôi sẽ luôn ở đây, cùng bạn vượt qua tất cả.</p>
-            <p>Love You!</p>
-            <p class="signature">Với tất cả tình yêu,<br>[Ba]</p>
+            <p>Gửi bạn nhỏ: Vi Thuý Trà </p>
+            <p>Chúc bạn nhỏ ngày càng xinh đẹp và luôn vui vẻ, cuộc sống đầy ắp tiếng cười.</p>
+            <p>Chúc những điều tốt đẹp sẽ đến với bạn nhỏ ❤️</p>
+            <p class="signature">Người Gửi ,<br>[Người Xấu Xa]</p>
             <p class="heart-symbol">❤️</p>
         </div>
     </div>
