--- a/banh.html
+++ b/banh.html
@@ -945,7 +945,7 @@
         </div>
     </div>
     <button class="balloon-button" onclick="releaseBalloons()">Thả Bóng Bay</button>
-    <div class="birthday-message" id="birthdayMessage">Chúc Mừng Ngày Quoóc Tế Thiếu Nhi 1/66</div>
+    <div class="birthday-message" id="birthdayMessage">Chúc Mừng Ngày Quốc Tế Thiếu Nhi 1/6</div>
     <div class="album" id="album">
         <div class="album-photo"></div>
         <div class="album-photo"></div>
